Chapter 2 : Loss functions

--- a/Python/Linear Classifiers in Python/takeaways.ipynb
+++ b/Python/Linear Classifiers in Python/takeaways.ipynb
@@ -156,6 +156,8 @@
     "\n",
     "# Evaluate hinge loss\n",
     "hinge_loss(y_test, y_pred_conf)\n",
+    "\n",
+    "\n",
     "```"
    ]
   },
@@ -172,7 +174,8 @@
    "source": [
     "- decision boundary: the surface separating different predicted classes\n",
     "- linear classifier: a classifier that learns linear decision boundaries\n",
-    "- linearly separable: a data set can be perfectly explained by a linear classifier\n"
+    "- linearly separable: a data set can be perfectly explained by a linear classifier\n",
+    "- loss function : a function that provides penalty score that determines how poorly the model performs"
    ]
   },
   {
@@ -214,6 +217,174 @@
     "    - When model complexity increases, variance increases and bias decreases\n",
     "    - When model complexity decreases, variance decreases and bias increases\n",
     "    - The sweet spot is the minimised generalization error, which gives the optimised model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Prediction"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- dot product of features and co-efficients"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Under the hood, prediction, y = dot product of co-efficient and X\n",
+    "# changing intercept shifts the boundary up or down\n",
+    "# changing co-efficient changes the sloper of the boundary\n",
+    "y = model.coef_ @ X + model.intercept_ \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression vs Linear Regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Linear regression:\n",
+    "    - Finds a line that fits and aligns tightly with the data\n",
+    "    - goal: line is the trend, any new value will appear *ON* the line\n",
+    "    - Predicts the value itself\n",
+    "    - Predicted value is a continuous value that exceeds 0 or 1\n",
+    "- Logistic regression\n",
+    "    - Finds a line / plane that separates the data by maximizing the distance\n",
+    "    - goal : Line is a no-man's land. New value will appear on *EITHER SIDE* of the line\n",
+    "    - predicts which class will the value fall in (sigmoid of the value).\n",
+    "    - Predicted value is a discrete value that should be between 0 or 1\n",
+    "    - construction: https://vitalflux.com/wp-content/uploads/2022/03/logistic-regression-model-3.png"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Why cannot we use Linear regression in Linear classification?\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- regression loss : \n",
+    "    - loss is higher when it is further away from true target value. \n",
+    "    - loss happens both ways (since it is continuous value).\n",
+    "    - squared loss curve perfectly captures this behavior\n",
+    "    - Goal : Capture the closeness of values to the original continuous value on both side (positive or negative)\n",
+    "- logistic loss: \n",
+    "    - loss is higher only for incorrect classifications. \n",
+    "    - loss happens in one direction (since it is binary classification.)\n",
+    "    - squared loss captures only one direction correctly, the other direction mistakes as \"the perfect model also has squared loss, and so the perfect model is the worst model\"\n",
+    "    - Goal : Capture the probability of the incorrectly classified values on incorrect side (sign does not matter as long as the dicrete value is an incorrect value. Correct value has 0 loss)\n",
+    "    - we need to eliminate the mistaken side by introducing the logistic function, that only takes range from 0 to 1.\n",
+    "- Hinge loss:\n",
+    "    - Correct prediction has 0 loss\n",
+    "    - Incorrect prediction has linear loss\n",
+    "- 0-1 loss:\n",
+    "    - It counts the number of misclassifications and averages it over the total number of samples."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/02.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/02.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Optimization (minimization problem)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- This is how gradient descent works\n",
+    "- We need to find the minimum value for a given function (eg:  loss function)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import numpy as np\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "# Define a cubic function to minimize: z = Ax^3 + By + C\n",
+    "def cubic_function(x, A, B, C):\n",
+    "    return A * x[0]**3 + B * x[1] + C\n",
+    "\n",
+    "# Coefficients for the cubic function\n",
+    "A_coefficient = 2.0\n",
+    "B_coefficient = -3.0\n",
+    "C_constant = 5.0\n",
+    "\n",
+    "# Initial guess\n",
+    "initial_guess = [1, 1]\n",
+    "\n",
+    "# Minimize the cubic function\n",
+    "result = minimize(cubic_function, initial_guess, args=(A_coefficient, B_coefficient, C_constant), method='Nelder-Mead')\n",
+    "\n",
+    "# Print the result\n",
+    "print(\"Minimum found at x:\", result.x)\n",
+    "print(\"Minimum function value (z):\", result.fun)\n",
+    "\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Log loss and hinge loss"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "# Mathematical functions for logistic and hinge losses\n",
+    "def log_loss(raw_model_output):\n",
+    "   return np.log(1+np.exp(-raw_model_output))\n",
+    "def hinge_loss(raw_model_output):\n",
+    "   return np.maximum(0,1-raw_model_output)\n",
+    "\n",
+    "# Create a grid of values and plot\n",
+    "grid = np.linspace(-2,2,1000)\n",
+    "plt.plot(grid, log_loss(grid), label='logistic')\n",
+    "plt.plot(grid, hinge_loss(grid), label='hinge')\n",
+    "plt.legend()\n",
+    "plt.show()\n",
+    "```"
    ]
   },
   {
