Chapter 3 : Logistic regression

--- a/Python/Linear Classifiers in Python/takeaways.ipynb
+++ b/Python/Linear Classifiers in Python/takeaways.ipynb
@@ -317,6 +317,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Loss and Cost function"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Loss : \n",
+    "    - Loss is the error of the model\n",
+    "    - Loss tells if a specified decision boundary has misclassified any data.\n",
+    "- Cost function: \n",
+    "    - A way to calculate the total error (loss) of the model.\n",
+    "    - Simply, Cost is the sum of loss\n",
+    "    - The lower the cost, the better the model.\n",
+    "    - Goal of Optimization algorithms is to minimize the cost\n",
+    "    - tells us which model is the best fit \n",
+    "    - eg: gradient descent\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Optimization (minimization problem)"
    ]
   },
@@ -390,7 +413,131 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Regularization \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.02.png\"  style=\"width: 400px, height: 300px;\"/></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Minimizes model co-efficients\n",
+    "- An extra term that penalizes large values of co-efficients\n",
+    "- Adds up with the loss function: Regularized loss = original loss + large co-efficient penalty\n",
+    "- Without regularization = maximize training accuracy\n",
+    "- How it affects unseen data: compromises large contribution \n",
+    "- reduces overfitting\n",
+    "- Lasso : \n",
+    "    - Linear regression with l1 regularization\n",
+    "    - Makes some co-efficients into 0\n",
+    "    - Performs feature selection by filtering out features with less contribution\n",
+    "- Ridge : \n",
+    "    - Linear regression with l2 regularization\n",
+    "    - Shrinks co-eficients\n",
+    "- example of regularization on logistic regression:\n",
+    "    - Logistic curve = probability curve between 0 to 1 of a given target class (for 2-class problem)\n",
+    "    - Ratio of co-efficients : slope of the boundary\n",
+    "    - Magnitude of co-efficients : confidence of the line\n",
+    "    - Without regularization : \n",
+    "        - high co-efficient leads to high confidence (over-confidence), \n",
+    "        - Over-confidence leads to high probability\n",
+    "        - this leads to overfitting\n",
+    "    - With regularization : \n",
+    "        - low co-efficient leads to low confidence, \n",
+    "        - This leads to low probability\n",
+    "        - With low probability, we have the standard"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Types of multi class logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/03.05.webp\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.04.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/03.03.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- One-vs-Rest (OvR) or One-vs-All:\n",
+    "    - a two class classifier trained for each class against the rest of the classes.\n",
+    "    -  Classifier with the highest confidence is chosen as the final prediction.\n",
+    "- One-vs-One (OvO):\n",
+    "    - binary classifiers are trained for each pair of combination of classes.\n",
+    "    - For n classes, n-1 classifiers are trained with pairs\n",
+    "    - Final output is determined by majority of votes amongst the classifiers\n",
+    "- Multinomial (Softmax):\n",
+    "    - directly trains a single classifier to predict the probabilities of each class.\n",
+    "    - uses a \"softmax\" activation function, which converts the raw outputs into class probabilities.\n",
+    "    - Calculates hyperplane distance with features and weights for each class. The distance is then converted to probability.\n",
+    "    - class with the highest probability is chosen as the final prediction.\n",
+    "    - nothing but the generalized argmax of multiple singular logistic regression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.multiclass import OneVsOneClassifier\n",
+    "from sklearn.datasets import load_iris\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "# Load iris dataset\n",
+    "iris = load_iris()\n",
+    "X, y = iris.data, iris.target\n",
+    "\n",
+    "# Split the dataset into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# One-vs-One Classifier\n",
+    "ovo_classifier = OneVsOneClassifier(LogisticRegression(solver='lbfgs', random_state=42))\n",
+    "ovo_classifier.fit(X_train, y_train)\n",
+    "ovo_predictions = ovo_classifier.predict(X_test)\n",
+    "ovo_accuracy = accuracy_score(y_test, ovo_predictions)\n",
+    "print(\"One-vs-One Accuracy:\", ovo_accuracy)\n",
+    "\n",
+    "# One-vs-Rest Classifier\n",
+    "ovr_classifier = LogisticRegression(multi_class='ovr', solver='liblinear', random_state=42)\n",
+    "ovr_classifier.fit(X_train, y_train)\n",
+    "ovr_predictions = ovr_classifier.predict(X_test)\n",
+    "ovr_accuracy = accuracy_score(y_test, ovr_predictions)\n",
+    "print(\"One-vs-Rest Accuracy:\", ovr_accuracy)\n",
+    "\n",
+    "# Multinomial Classifier\n",
+    "multinomial_classifier = LogisticRegression(multi_class='multinomial', solver='lbfgs', random_state=42)\n",
+    "multinomial_classifier.fit(X_train, y_train)\n",
+    "multinomial_predictions = multinomial_classifier.predict(X_test)\n",
+    "multinomial_accuracy = accuracy_score(y_test, multinomial_predictions)\n",
+    "print(\"Multinomial Accuracy:\", multinomial_accuracy)\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
