Chapter 4 : Support Vector Machines

--- a/Python/Linear Classifiers in Python/takeaways.ipynb
+++ b/Python/Linear Classifiers in Python/takeaways.ipynb
@@ -538,6 +538,105 @@
     "print(\"Multinomial Accuracy:\", multinomial_accuracy)\n",
     "```"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Chapter 4"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Not all datapoints are linearly separable on lower dimension\n",
+    "- Transform such dataset to a higher dimensional space where it can be linearly separable by a hyperplane\n",
+    "- Support vectors: \n",
+    "    - examples/data points closest to the hyperplane\n",
+    "    - both classified and misclassified datapoints are counted\n",
+    "    - If a datapoint is not a support vector, removing it will not affect the model\n",
+    "    - Small number of support vectors = fast kernel SVMs\n",
+    "- margin : distance from a support vector to decision boundary\n",
+    "- best decision boundary has equal distance from all support vectors\n",
+    "- The best separable line is the hyperplane has the biggest margin\n",
+    "- Measure of closeness : Regularization parameters (hinge loss and l2)\n",
+    "- Boundary decision lines : The lines that touches the support vectors / closest the the support vectors\n",
+    "- Soft margin SVM : Used when the classes are not separable (Controlled by regularization parameter)\n",
+    "- kernel : Sometimes it is difficult to caculate the mapping of transformation. So we use a shortcut called kernel that is computationally less expensive.\n",
+    "    - RBF : support vector = Difference between 2 inputs: X and X` \n",
+    "    - C hyperparameter = regularization\n",
+    "    - gamma hyperparameter = smoothness of the boundary\n",
+    "- Stochastic gradient descent (SGD) : \n",
+    "    - Similar to SVM, but scales well for large dataset\n",
+    "    - how : uses gradient descent to find out the maximised margin among possible margins."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"images/04.01.png\"  style=\"width: 400px, height: 300px;\"/></center>\n",
+    "<center><img src=\"images/04.02.png\"  style=\"width: 400px, height: 300px;\"/></center>\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### SVM and Stochastic Gradient Descent"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Method 1 : SVM (Support Vector Machine)\n",
+    "from sklearn.svm import LinearSVC, SVC \n",
+    "svm = LinearSVC(class_weight='balanced', random_state=42, loss=\"hinge\", fit_intercept=False) \n",
+    "svm_alternative = SVC(kernel='linear', gamma=.5, probability=True) # Alternative 1\n",
+    "\n",
+    "# in contrast to scikit-learn's LinearSVC, Snap ML offers multi-threaded CPU/GPU training of SVMs\n",
+    "from snapml import SupportVectorMachine\n",
+    "snapml_svm_cpu = SupportVectorMachine(class_weight='balanced', n_jobs=4, fit_intercept=False) # Alternative 2 \n",
+    "snapml_svm_gpu = SupportVectorMachine(class_weight='balanced', use_gpu=True, fit_intercept=False) # Alternative 3\n",
+    "\n",
+    "# Method 2 : SGD (Stochastic Gradient Descent)\n",
+    "from sklearn.linear_model import SGDClassifier\n",
+    "sgd = SGDClassifier(loss='hinge', class_weight='balanced', random_state=42, fit_intercept=False)\n",
+    "\n",
+    "# Measure training time\n",
+    "t0 = time.time()\n",
+    "model.fit(X_train, y_train)\n",
+    "train_time = time.time() - t0\n",
+    "\n",
+    "# Predict\n",
+    "y_pred = model.predict(X_test)\n",
+    "\n",
+    "# Evaluate model\n",
+    "roc_auc_score(y_test, y_pred)\n",
+    "\n",
+    "# Get confidence score for probability\n",
+    "y_pred_conf = model.decision_function(X_test)\n",
+    "\n",
+    "# Evaluate hinge loss\n",
+    "hinge_loss(y_test, y_pred_conf)\n",
+    "\n",
+    "# See index of support vectors in X\n",
+    "svm.support_\n",
+    "# Fetch support vector points from training set (Training with only support will yield same model)\n",
+    "X_small = X[svm.support_]\n",
+    "y_small = y[svm.support_]\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
