Chapter 3 : Feature Selection II - Selecting for Model Accuracy

--- a/Python/Dimensionality Reduction in Python/takeaways.ipynb
+++ b/Python/Dimensionality Reduction in Python/takeaways.ipynb
@@ -23,7 +23,21 @@
     "    - Use PCA\n",
     "- Visualize the contribution of features with t-sne\n",
     "    - Use t-sne on numeric features and visualize them in 2D\n",
-    "    - use categorical features as `hue` of scatterplot for transformed t-sne to identify driver features"
+    "    - use categorical features as `hue` of scatterplot for transformed t-sne to identify driver features\n",
+    "- Discard less important features of a model by filtering out with a threshold co-efficient value:\n",
+    "    - Recursive feature elimination\n",
+    "    - train the model, drop the feature with lowest co-efficient\n",
+    "    - train the model again, drop the next feature with lowest co-efficient\n",
+    "    - continue until a desired number of features remain\n",
+    "- Voting from many models:\n",
+    "    - Perform RFE on many models.\n",
+    "    - Do votes on existing features for all models\n",
+    "    - The features that survive most of the time are the desired features\n",
+    "    - Note : make sure the dataset is standardized, regularized, cross-validated\n",
+    "- Use trees to find out important features\n",
+    "- Generate new features from existing features:\n",
+    "    - eg: average arm length column from left arm column and right arm column\n",
+    "    "
    ]
   },
   {
@@ -56,12 +70,40 @@
     "mask = pokemon_df.isna().sum() / len(pokemon_df) < 0.3\n",
     "reduced_df = df.loc[:, mask]\n",
     "\n",
+    "# Generate new features\n",
+    "df[\"avg_col\"]=( df[\"col1\"] + df[\"col2\"])/2\n",
+    "\n",
     "# Drop scaled variance up to a threshold (features with very low variance or close to 0)\n",
     "from sklearn.feature_selection import VarianceThreshold\n",
     "sel = VarianceThreshold(threshold=0.005)\n",
     "sel.fit(df / df.mean())\n",
     "mask = sel.get_support()\n",
     "reduced_df = df.loc[:, mask]\n",
+    "\n",
+    "# Recursive feature elimination during training \n",
+    "from sklearn.feature_selection import RFE\n",
+    "rfe = RFE(estimator=LogisticRegression(), n_features_to_select=2, step=1, verbose=1) # drop 1 feature at each step\n",
+    "rfe.fit(X_train_std, y_train)\n",
+    "# See the surviving features\n",
+    "X.columns[rfe.support_]\n",
+    "# See ranking (higher ranking = weakest features that were eliminated first)\n",
+    "print(dict(zip(X.columns, rfe.ranking_)))\n",
+    "print(accuracy_score(y_test, rfe.predict(X_test_std)))\n",
+    "\n",
+    "# Voting from RFE\n",
+    "gb_mask = rfe_gb.support_\n",
+    "rf_mask = rfe_rf.support_\n",
+    "votes = np.sum([rf_mask, gb_mask], axis=0)\n",
+    "final_mask = votes >= 2\n",
+    "reduced_X = X.loc[:, final_mask]\n",
+    "\n",
+    "# Tree based models to filter out features (You can use RFE with it)\n",
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(X_train, y_train)\n",
+    "mask = rf.feature_importances_ > 0.1\n",
+    "# See surviving features\n",
+    "X_reduced = X.loc[:, mask]\n",
+    "print(X_reduced.columns)\n",
     "```"
    ]
   },
@@ -128,7 +170,57 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Chapter 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RFE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Discard less important features of a model by filtering out with a threshold co-efficient value:\n",
+    "    - Recursive feature elimination\n",
+    "    - train the model, drop the feature with lowest co-efficient\n",
+    "    - train the model again, drop the next feature with lowest co-efficient\n",
+    "    - continue until a desired number of features remain\n",
+    "- Voting from many models:\n",
+    "    - Perform RFE on many models.\n",
+    "    - Do votes on existing features for all models\n",
+    "    - The features that survive most of the time are the desired features\n",
+    "    - Note : make sure the dataset is standardized, regularized, cross-validated"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```\n",
+    "# Recursive feature elimination during training \n",
+    "from sklearn.feature_selection import RFE\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "rfe = RFE(estimator=LogisticRegression(), n_features_to_select=2, step=1, verbose=1) # drop 1 feature at each step\n",
+    "rfe.fit(X_train_std, y_train)\n",
+    "# See the surviving features\n",
+    "X.columns[rfe.support_]\n",
+    "# See ranking (higher ranking = weakest features that were eliminated first)\n",
+    "print(dict(zip(X.columns, rfe.ranking_)))\n",
+    "print(accuracy_score(y_test, rfe.predict(X_test_std)))\n",
+    "\n",
+    "# Voting from RFE\n",
+    "mask1 = rfe_model1.support_\n",
+    "mask2 = rfe_model2.support_\n",
+    "votes = np.sum([mask1, mask2], axis=0)\n",
+    "final_mask = votes >= 2\n",
+    "reduced_X = X.loc[:, final_mask]\n",
+    "```"
+   ]
   }
  ],
  "metadata": {
